# data-collector-unit-poc

./: .clinerules  .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
docs/: architecture.md  data_storage.md
src/data_collector_unit_poc/: data_storage.py  import_data_from_file.py  settings.py
src/data_collector_unit_poc/core/: db.py  stocks.py  vectordb.py  weather.py
src/data_collector_unit_poc/dagster/: __init__.py  jobs.py  schedules.py  workspace.yaml
src/data_collector_unit_poc/dagster/service/: dagster.yaml
src/data_collector_unit_poc/jobs/: coal_prediction.py  commodities.py  data_formats.py  summarizer_ingest_poc.py  weather.py
src/data_collector_unit_poc/migrations/: alembic.ini  import_data_from_file.py
src/data_collector_unit_poc/migrations/migrations/: env.py
src/data_collector_unit_poc/migrations/migrations/versions/: 92e94b01e6f1_create_posts_table.py
src/data_collector_unit_poc/notebooks/: isd.ipynb  summarizer-evaluate-poc.ipynb  summarizer-ingest-poc.ipynb  summarizer-ui-poc.ipynb  summarizer_ingest_poc.py
src/data_collector_unit_poc/web/: frontend.py  main.py  nicegui_auth.py  scheduler.py  storage.py
